expandir ao clicar na img

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
     <section class="imagens">
 
     </section>
+
+    <div id="myModal" class="modal">
+        <span class="fechar">&times;</span>
+        <img class="modal-content" id="img01">
+    </div>
+    
     <footer>
         <h6>Desenvolvido por <a href="www.google.com">Lucas Pinheiro &copy</a></h6>
     </footer>
