--- a/index.html
+++ b/index.html
@@ -11,25 +11,27 @@
 </head>
 
 <body>
-    <h1>Pesquisador de imagens JavaScript</h1>
-    <form>
-        <label style="font-size: 1.5em" for="palavra">Pesquisa:</label>
-        <input class="u-full-width" type="text" id="palavra" name="palavra" placeholder="Digite uma palavra...">
-        <button type="submit">Pesquisar</button>
-    </form>
-    <div style="text-align: center">
-        <img id="loadingImage" src="./loading.gif">
+    <div id="wrapper">
+        <h1>Pesquisador de imagens JavaScript</h1>
+        <form>
+            <label style="font-size: 1.5em" for="palavra">Pesquisa:</label>
+            <input class="u-full-width" type="text" id="palavra" name="palavra" placeholder="Digite uma palavra...">
+            <button type="submit">Pesquisar</button>
+        </form>
+        <div id="loading" style="text-align: center">
+            <img src="./loading.gif">
+            <small>A primeira pesquisa pode demorar até 30 segundos...</small>
+        </div>
+
+        <section class="imagens">
+
+        </section>
+
+        <div id="myModal" class="modal">
+            <span class="fechar">&times;</span>
+            <img class="modal-content" id="img01">
+        </div>
     </div>
-
-    <section class="imagens">
-
-    </section>
-
-    <div id="myModal" class="modal">
-        <span class="fechar">&times;</span>
-        <img class="modal-content" id="img01">
-    </div>
-    
     <footer>
         <h6>Desenvolvido por <a href="www.google.com">Lucas Pinheiro &copy</a></h6>
     </footer>
