--- a/index.html
+++ b/index.html
@@ -1,41 +1,46 @@
 <!DOCTYPE html>
-<html>
-
-<head>
+<html lang="pt-br">
+  <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Pesquisador de imagens JavaScript</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-</head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <title>Image Search App by Lucas Pinheiro</title>
+  </head>
 
-<body>
+  <body>
     <div id="wrapper">
-        <h1>Pesquisador de imagens JavaScript</h1>
-        <form>
-            <label style="font-size: 1.5em" for="palavra">Pesquisa:</label>
-            <input class="u-full-width" type="text" id="palavra" name="palavra" placeholder="Digite uma palavra...">
-            <button type="submit">Pesquisar</button>
-        </form>
-        <div id="loading" style="text-align: center">
-            <img src="./loading.gif">
-            <small>A primeira pesquisa pode demorar até 30 segundos...</small>
-        </div>
+      <h1>Image Search App</h1>
+      <form>
+        <label style="font-size: 1.5em;" for="palavra">Pesquisa:</label>
+        <input
+          class="u-full-width"
+          type="text"
+          id="palavra"
+          name="palavra"
+          placeholder="Digite uma palavra..."
+        />
+        <button type="submit">Pesquisar</button>
+      </form>
+      <div id="loading" style="text-align: center;">
+        <img src="./images/loading.gif" />
+        <small>A primeira pesquisa pode demorar até 30 segundos...</small>
+      </div>
 
-        <section class="imagens">
+      <section class="images"></section>
 
-        </section>
-
-        <div id="myModal" class="modal">
-            <span class="fechar">&times;</span>
-            <img class="modal-content" id="img01">
-        </div>
+      <div id="myModal" class="modal">
+        <span class="fechar">&times;</span>
+        <img class="modal-content" id="img01" />
+      </div>
     </div>
     <footer>
-        <h6>Desenvolvido por <a href="www.google.com">Lucas Pinheiro &copy</a></h6>
+      <h6>Desenvolvido por <a href="www.google.com">Lucas Pinheiro &copy</a></h6>
     </footer>
-</body>
-<script src="client.js"></script>
-
+  </body>
+  <script src="js/client.js"></script>
 </html>
